src/objects/Ter_Venta_TDC__c.object
<CustomObject>
    <fields>
        <fullName>Ter_Cliente__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cuenta</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Ventas TDC</relationshipLabel>
        <relationshipName>Ventas_TDC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ter_Estado__c</fullName>
        <label>Estado</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pendiente</fullName>
                    <default>true</default>
                    <label>Pendiente</label>
                </value>
                <value>
                    <fullName>Procesar</fullName>
                </value>
                <value>
                    <fullName>Aprobada</fullName>
                </value>
                <value>
                    <fullName>Rechazada</fullName>
                </value>
                <value>
                    <fullName>Reintentar</fullName>
                </value>
                <value>
                    <fullName>Revertida</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ter_IdVenta__c</fullName>
        <label>Id Venta</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ter_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Member</label>
        <referenceTo>FieloPLT__Member__c</referenceTo>
        <relationshipLabel>Ventas TDC</relationshipLabel>
        <relationshipName>Ventas_TDC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ter_OrigenVenta__c</fullName>
        <label>Origen Venta</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Estación de Servicio</fullName>
                </value>
                <value>
                    <fullName>Tienda</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ter_Tienda__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Negocio Complementario</label>
        <referenceTo>Ter_Negocio_Complementario__c</referenceTo>
        <relationshipLabel>Ventas TDC</relationshipLabel>
        <relationshipName>Ventas_TDC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ter_TipoTransaccion__c</fullName>
        <label>Tipo Transaccion</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Acumulación</fullName>
                </value>
                <value>
                    <fullName>Redención</fullName>
                </value>
                <value>
                    <fullName>Reclamación</fullName>
                </value>
                <value>
                    <fullName>Reversión</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ter_TipoVenta__c</fullName>
        <label>Tipo Venta</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Líquidos</fullName>
                </value>
                <value>
                    <fullName>Canastilla</fullName>
                </value>
                <value>
                    <fullName>Tiendas</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ter_TransaccionProcesada__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Transacción Procesada</label>
        <type>Checkbox</type>
    </fields>
    <label>Venta TDC</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Ter_IdVenta__c</columns>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
        <language>es</language>
    </listViews>
    <nameField>
        <displayFormat>V-{0000000000}</displayFormat>
        <label>Nombre de Ventas TDC</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ventas TDC</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>